# TaskManager

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
postgres/: init_tables.sql
src/: __main__.py  app.py  main.py  task.py
src/database/: __init__.py  database.py
src/models/: __init__.py  user.py
src/routers/: __init__.py
src/routers/auth/: __init__.py  login_router.py  registration_router.py
src/routers/tasks/: add_task_router.py  delete_task_router.py  get_all_tasks_router.py  get_user_tasks_router.py
src/routers/users/: __init__.py  get_all_users_router.py  remove_user_router.py
